--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
         </div>
       </header>
       <main>
-        <section class="main-home"></section>
-        <section class="main-home"></section>
-        <section class="main-home"></section>
+        <article>
+          <section class="main-home"></section>
+          <section class="main-home"></section>
+          <section class="main-home"></section>
+        </article>
+        <section class="user-section"></section>
       </main>
       <footer></footer>
     </div>
